--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,3 @@
-@config "../tailwind.config.cjs";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,3 +19,5 @@
 		scrollbar-width: none; /* Firefox */
 	}
 }
+
+@tailwind screens;
